--- a/styles/style.css
+++ b/styles/style.css
@@ -24,10 +24,7 @@ body {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
-}
-
-main {
-  flex: 1;
+  justify-content: space-between;
 }
 
 .container {
